Fix horizontal overflow for header-image slider
- use padding instead of margin-inline

--- a/files/contaodemo/theme/src/scss/layout/_article.scss
+++ b/files/contaodemo/theme/src/scss/layout/_article.scss
@@ -95,7 +95,7 @@
   // header-slider
   &.header-image {
     @include breakpoint(lg, max) {
-      margin-inline: -$s-grid-outer-gutter--large;
+      padding: 0;
     }
 
     #{$parent}__inner {
